oasis-macros/tests/ui/generic_state.stderr
error: Contract cannot contain generic types.
 --> $DIR/generic_state.rs:5:21
  |
5 |     pub struct State<T>(Option<T>);
  |                     ^

error: aborting due to previous error

